--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: app1
-        image: joindevops/app1:1.0.0
+        image: prakash14306/nginx:1.0
         ports:
         - containerPort: 80
 ---
