--- a/app2/manifest.yaml
+++ b/app2/manifest.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: app2
-        image: joindevops/app2:1.0.0
+        image: prakash14306/nginx:2.0
         ports:
         - containerPort: 80
     
